# personal-health-intelligence

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: GITHUB_SETUP.md  GIT_GUIDE.md  LOCAL_SETUP.md  PROJECT_STRUCTURE.md
kingdoms/file_commander/: README.md  catalog_playground.py
kingdoms/file_commander/src/: operations.py  scanner.py
kingdoms/file_commander/tests/: test_operations.py  test_scanner.py
kingdoms/file_commander/ui/: streamlit_app.py
shared/: README.md
shared/database/: database.py
